Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Hello universe! : Hayreddin&#39;s personal website">
+    <meta name="description" content="Hayro&#39;s blog : Enhanced Security by Machine Learning">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Hello universe!</title>
+    <title>Hayro&#39;s blog</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/hayreddin">View on GitHub</a>
 
-          <h1 id="project_title">Hello universe!</h1>
-          <h2 id="project_tagline">Hayreddin&#39;s personal website</h2>
+          <h1 id="project_title">Hayro&#39;s blog</h1>
+          <h2 id="project_tagline">Enhanced Security by Machine Learning</h2>
 
         </header>
     </div>
